--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: apparat-semicond,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   line-height: 1.5;
   font-weight: 400;
 
@@ -83,4 +83,8 @@ button:focus-visible {
   width: 100%;
   height: auto;
   margin: 4rem 0;
+}
+
+.pause-btn {
+  margin-right: 1rem;
 }
