--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   font-family: apparat-semicond,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,12 +28,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.8em;
   line-height: 1.1;
 }
 
@@ -71,7 +70,7 @@ button:focus-visible {
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
 }
 
@@ -83,6 +82,7 @@ button:focus-visible {
   width: 100%;
   height: auto;
   margin: 4rem 0;
+  min-height: 50vh;
 }
 
 .pause-btn {
