--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,11 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: rgb(38 166 154);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  opacity: 0.75;
 }
 
 body {
@@ -59,9 +58,6 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
   button {
     background-color: #f9f9f9;
   }
@@ -81,8 +77,12 @@ button:focus-visible {
 .gas-chart {
   width: 100%;
   height: auto;
-  margin: 4rem 0;
+  margin: 4rem 0 2rem 0;
   min-height: 50vh;
+}
+
+footer {
+  margin-top: 2rem;
 }
 
 .pause-btn {
